// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tokenizer should skip comment at the end of the line 1`] = `
Array [
  Object {
    "end": 5,
    "loc": Object {
      "end": Object {
        "column": 5,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
    "raw": "done:",
    "start": 0,
    "type": "Unknown",
    "value": "DONE:",
  },
  Object {
    "end": 28,
    "loc": Object {
      "end": Object {
        "column": 3,
        "line": 1,
      },
      "start": Object {
        "column": 0,
        "line": 1,
      },
    },
    "raw": "end",
    "start": 25,
    "type": "Unknown",
    "value": "END",
  },
]
`;

exports[`tokenizer should skip line with comment 1`] = `
Array [
  Object {
    "end": 23,
    "loc": Object {
      "end": Object {
        "column": 3,
        "line": 1,
      },
      "start": Object {
        "column": 0,
        "line": 1,
      },
    },
    "raw": "end",
    "start": 20,
    "type": "Unknown",
    "value": "END",
  },
]
`;

exports[`tokenizer should skip whitespace 1`] = `
Array [
  Object {
    "end": 8,
    "loc": Object {
      "end": Object {
        "column": 5,
        "line": 1,
      },
      "start": Object {
        "column": 0,
        "line": 1,
      },
    },
    "raw": "done:",
    "start": 3,
    "type": "Unknown",
    "value": "DONE:",
  },
  Object {
    "end": 14,
    "loc": Object {
      "end": Object {
        "column": 3,
        "line": 2,
      },
      "start": Object {
        "column": 0,
        "line": 2,
      },
    },
    "raw": "end",
    "start": 11,
    "type": "Unknown",
    "value": "END",
  },
]
`;

exports[`tokenizer should tokenize address 1`] = `
Array [
  Object {
    "end": 2,
    "loc": Object {
      "end": Object {
        "column": 2,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
    "raw": "[]",
    "start": 0,
    "type": "Address",
    "value": "",
  },
  Object {
    "end": 7,
    "loc": Object {
      "end": Object {
        "column": 7,
        "line": 0,
      },
      "start": Object {
        "column": 3,
        "line": 0,
      },
    },
    "raw": "[00]",
    "start": 3,
    "type": "Address",
    "value": "00",
  },
  Object {
    "end": 12,
    "loc": Object {
      "end": Object {
        "column": 12,
        "line": 0,
      },
      "start": Object {
        "column": 8,
        "line": 0,
      },
    },
    "raw": "[al]",
    "start": 8,
    "type": "Address",
    "value": "AL",
  },
]
`;

exports[`tokenizer should tokenize comma 1`] = `
Array [
  Object {
    "end": 1,
    "loc": Object {
      "end": Object {
        "column": 1,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
    "raw": ",",
    "start": 0,
    "type": "Comma",
    "value": ",",
  },
  Object {
    "end": 3,
    "loc": Object {
      "end": Object {
        "column": 1,
        "line": 1,
      },
      "start": Object {
        "column": 0,
        "line": 1,
      },
    },
    "raw": ",",
    "start": 2,
    "type": "Comma",
    "value": ",",
  },
  Object {
    "end": 4,
    "loc": Object {
      "end": Object {
        "column": 2,
        "line": 1,
      },
      "start": Object {
        "column": 1,
        "line": 1,
      },
    },
    "raw": ",",
    "start": 3,
    "type": "Comma",
    "value": ",",
  },
]
`;

exports[`tokenizer should tokenize digits 1`] = `
Array [
  Object {
    "end": 1,
    "loc": Object {
      "end": Object {
        "column": 1,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
    "raw": "0",
    "start": 0,
    "type": "Digits",
    "value": "0",
  },
  Object {
    "end": 4,
    "loc": Object {
      "end": Object {
        "column": 4,
        "line": 0,
      },
      "start": Object {
        "column": 2,
        "line": 0,
      },
    },
    "raw": "01",
    "start": 2,
    "type": "Digits",
    "value": "01",
  },
  Object {
    "end": 8,
    "loc": Object {
      "end": Object {
        "column": 8,
        "line": 0,
      },
      "start": Object {
        "column": 5,
        "line": 0,
      },
    },
    "raw": "002",
    "start": 5,
    "type": "Digits",
    "value": "002",
  },
]
`;

exports[`tokenizer should tokenize register 1`] = `
Array [
  Object {
    "end": 2,
    "loc": Object {
      "end": Object {
        "column": 2,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
    "raw": "al",
    "start": 0,
    "type": "Register",
    "value": "AL",
  },
  Object {
    "end": 5,
    "loc": Object {
      "end": Object {
        "column": 5,
        "line": 0,
      },
      "start": Object {
        "column": 3,
        "line": 0,
      },
    },
    "raw": "Bl",
    "start": 3,
    "type": "Register",
    "value": "BL",
  },
  Object {
    "end": 8,
    "loc": Object {
      "end": Object {
        "column": 8,
        "line": 0,
      },
      "start": Object {
        "column": 6,
        "line": 0,
      },
    },
    "raw": "cL",
    "start": 6,
    "type": "Register",
    "value": "CL",
  },
  Object {
    "end": 11,
    "loc": Object {
      "end": Object {
        "column": 11,
        "line": 0,
      },
      "start": Object {
        "column": 9,
        "line": 0,
      },
    },
    "raw": "DL",
    "start": 9,
    "type": "Register",
    "value": "DL",
  },
]
`;

exports[`tokenizer should tokenize string 1`] = `
Array [
  Object {
    "end": 2,
    "loc": Object {
      "end": Object {
        "column": 2,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
    "raw": "\\"\\"",
    "start": 0,
    "type": "String",
    "value": "",
  },
  Object {
    "end": 21,
    "loc": Object {
      "end": Object {
        "column": 21,
        "line": 0,
      },
      "start": Object {
        "column": 3,
        "line": 0,
      },
    },
    "raw": "\\"this is a string\\"",
    "start": 3,
    "type": "String",
    "value": "this is a string",
  },
]
`;
